--- a/linux-nspa/PKGBUILD
+++ b/linux-nspa/PKGBUILD
@@ -75,7 +75,7 @@ _stable=${_major}.${_minor}
 _srcname=linux-rt-devel-6.0-rt11
 arch=(x86_64 x86_64_v3)
 pkgdesc='Linux-NSPA: PREEMPT_RT_FULL kernel with a twist'
-pkgrel=11
+pkgrel=12
 arch=('x86_64' 'x86_64_v3')
 url="https://github.com/nine7nine/Linux-NSPA"
 license=('GPL2')
@@ -322,17 +322,17 @@ prepare() {
     fi
 
 
-#    ### Optionally load needed modules for the make localmodconfig
-#    # See https://aur.archlinux.org/packages/modprobed-db
-#    if [ -n "$_localmodcfg" ]; then
-#        if [ -e $HOME/.config/modprobed.db ]; then
-#            echo "Running Steven Rostedt's make localmodconfig now"
-#            make ${BUILD_FLAGS[*]} LSMOD=$HOME/.config/modprobed.db localmodconfig
-#        else
-#            echo "No modprobed.db data found"
-#            exit
-#        fi
-#    fi
+    ### Optionally load needed modules for the make localmodconfig
+    # See https://aur.archlinux.org/packages/modprobed-db
+    if [ -n "$_localmodcfg" ]; then
+        if [ -e $HOME/.config/modprobed.db ]; then
+            echo "Running Steven Rostedt's make localmodconfig now"
+            make ${BUILD_FLAGS[*]} LSMOD=$HOME/.config/modprobed.db localmodconfig
+        else
+            echo "No modprobed.db data found"
+            exit
+        fi
+    fi
 
     echo "Applying default config..."
     make ${BUILD_FLAGS[*]}  olddefconfig
@@ -469,7 +469,7 @@ for _p in "${pkgname[@]}"; do
 done
 
 sha256sums=('98001d91f5bb1d29ad9489c71a6a75950c2610027e9eb0c513379b8f6d44df38'
-            'cdb8494b55132eceb05953c7b59b99a43b5ffdda38ebe4255b3cc0904129713e'
+            '0a7588c95fdfc828993cd2878045ae31ac73a217a11e5943322213557f3fec29'
             '9abdc6c5f40b81c044f5549e8f29d474dc51e2765ee2b5e9a5fba9e62499dd9e'
             'e1d45b5842079a5f0f53d7ea2d66ffa3f1497766f3ccffcf13ed00f1ac67f95e'
             '8d4a22387dbe7a9f339555c99bd70c55c033422026244b98cbfd93eb39fb99c2'
