--- a/linux-nspa/PKGBUILD
+++ b/linux-nspa/PKGBUILD
@@ -75,7 +75,7 @@ _stable=${_major}.${_minor}
 _srcname=linux-rt-devel-6.0-rt11
 arch=(x86_64 x86_64_v3)
 pkgdesc='Linux-NSPA: PREEMPT_RT_FULL kernel with a twist'
-pkgrel=13
+pkgrel=14
 arch=('x86_64' 'x86_64_v3')
 url="https://github.com/nine7nine/Linux-NSPA"
 license=('GPL2')
@@ -125,6 +125,7 @@ source=(
   "0035-Signal-break_out_of_wait_loops_on_kthread_stop.patch"
   "0037-softirq_rt_optmizations_v4.patch"
   "0038-designware-Fix_handling_of_real_but_unexpected_device_interrupts.patch"
+  "0039-tk_vm-mm_optimizations.patch"
 )
 
 export KBUILD_BUILD_HOST=archlinux
@@ -474,7 +475,7 @@ sha256sums=('98001d91f5bb1d29ad9489c71a6a75950c2610027e9eb0c513379b8f6d44df38'
             '9abdc6c5f40b81c044f5549e8f29d474dc51e2765ee2b5e9a5fba9e62499dd9e'
             'e1d45b5842079a5f0f53d7ea2d66ffa3f1497766f3ccffcf13ed00f1ac67f95e'
             '8d4a22387dbe7a9f339555c99bd70c55c033422026244b98cbfd93eb39fb99c2'
-            'd6df293139a7a04720b74832a726ebcf733f467b3af051570c6ba0c602d1fa8e'
+            'f95d91e380de25af5615ea7c4176ea0ea955458cec2c7b35dac8cff84433c3e5'
             '1f2d5ead4a66bb615ea6f9830d15740c0f2d82b9e1df3f321b7940901657b596'
             '92d1dcd9dab57cc8157e86ecb5e4ef62f60b6482300d6be2ff1ab486e328c97d'
             '550ee05b3b79d1481e68bb1de75abba14cadffd7e3bad848410eb5262aef0fe2'
@@ -511,5 +512,6 @@ sha256sums=('98001d91f5bb1d29ad9489c71a6a75950c2610027e9eb0c513379b8f6d44df38'
             'ccc57033c40817060be1399e4be9e1db585c695967a74c0f3b94bc342c242bea'
             'a32576a1c21e3cc1a892e36ea221677d5da318c141693127ab00bb863378638b'
             '2b392ce19b2e924d4e8b2603179eb859595e7710b7c594bba22f6e9099fc329d'
-            'd965b53e37b982cf9681ea2251f2be2e3f64a55bfea094a9ace55c88da4f0d49')
+            'd965b53e37b982cf9681ea2251f2be2e3f64a55bfea094a9ace55c88da4f0d49'
+            '65f27712e555a70ec358bbb75db50ef922ab6000b62c752f6388e5d5963ae370')
 
