--- a/linux-nspa/PKGBUILD
+++ b/linux-nspa/PKGBUILD
@@ -75,7 +75,7 @@ _stable=${_major}.${_minor}
 _srcname=linux-rt-devel-6.0-rt11
 arch=(x86_64 x86_64_v3)
 pkgdesc='Linux-NSPA: PREEMPT_RT_FULL kernel with a twist'
-pkgrel=14
+pkgrel=15
 arch=('x86_64' 'x86_64_v3')
 url="https://github.com/nine7nine/Linux-NSPA"
 license=('GPL2')
@@ -126,6 +126,9 @@ source=(
   "0037-softirq_rt_optmizations_v4.patch"
   "0038-designware-Fix_handling_of_real_but_unexpected_device_interrupts.patch"
   "0039-tk_vm-mm_optimizations.patch"
+  "0040-sched-Fix_race_in_task_call_func.patch"
+  "0041-sched-fair-Introduce-priority-load-balance-for-CFS.patch"
+  "0042-v2_sched-sched_fork-optimizations.patch"
 )
 
 export KBUILD_BUILD_HOST=archlinux
@@ -471,7 +474,7 @@ for _p in "${pkgname[@]}"; do
 done
 
 sha256sums=('98001d91f5bb1d29ad9489c71a6a75950c2610027e9eb0c513379b8f6d44df38'
-            '0a7588c95fdfc828993cd2878045ae31ac73a217a11e5943322213557f3fec29'
+            '860c1555f540ce9278b067f1acb588617d8c1c45faae53401f2200af07b2a6a6'
             '9abdc6c5f40b81c044f5549e8f29d474dc51e2765ee2b5e9a5fba9e62499dd9e'
             'e1d45b5842079a5f0f53d7ea2d66ffa3f1497766f3ccffcf13ed00f1ac67f95e'
             '8d4a22387dbe7a9f339555c99bd70c55c033422026244b98cbfd93eb39fb99c2'
@@ -513,5 +516,8 @@ sha256sums=('98001d91f5bb1d29ad9489c71a6a75950c2610027e9eb0c513379b8f6d44df38'
             'a32576a1c21e3cc1a892e36ea221677d5da318c141693127ab00bb863378638b'
             '2b392ce19b2e924d4e8b2603179eb859595e7710b7c594bba22f6e9099fc329d'
             'd965b53e37b982cf9681ea2251f2be2e3f64a55bfea094a9ace55c88da4f0d49'
-            '65f27712e555a70ec358bbb75db50ef922ab6000b62c752f6388e5d5963ae370')
+            '65f27712e555a70ec358bbb75db50ef922ab6000b62c752f6388e5d5963ae370'
+            '6dfe8e2900e7528f3d546231b09dd40813202056b293183fd62da0d2c2b44d41'
+            '5bd4a1e9c0a7f86531b98f0d9252e89da6cb375f0fde2ece9cf5fb82568c3a03'
+            '6763b3ce2e74b474445f455fd45cf82554e61d53a56ec50a73592710031b9383')
 
