Linux-NSPA: update pkg. sched and amdgpu patchwork updates
 - update the uclamp related patchwork (drop old patch)
 - update the cpu affinity patwork (drop old patch)
 - pull sched/core updates from linux-tip (includes the above)
 - pull in various amdgpu fixes

Signed-off-by: Jordan Johnston <johnstonljordan@gmail.com>

--- a/linux-nspa/config
+++ b/linux-nspa/config
@@ -202,6 +202,9 @@ CONFIG_UCLAMP_BUCKETS_COUNT=5
 CONFIG_SCHED_PRIO_LB=y
 # end of Scheduler features
 
+CONFIG_CC_OPTIMIZE_FOR_PERFORMANCE_O3=y
+CONFIG_NSPA=y
+
 CONFIG_ARCH_SUPPORTS_NUMA_BALANCING=y
 CONFIG_ARCH_WANT_BATCHED_UNMAP_TLB_FLUSH=y
 CONFIG_CC_HAS_INT128=y
