--- a/linux-nspa-devel/PKGBUILD
+++ b/linux-nspa-devel/PKGBUILD
@@ -63,7 +63,7 @@ _zstd_compression=y
 _nf_cone=y
 
  pkgbase=linux-nspa-devel
-_major=6.0
+_major=6.x
 #_minor=4
 #_minorc=$((_minor+1))
 #_rcver=rc8
@@ -75,7 +75,7 @@ _stable=${_major}.${_minor}
 _srcname=linux-rt-devel-6.0-rt11
 arch=(x86_64 x86_64_v3)
 pkgdesc='Linux-NSPA: PREEMPT_RT_FULL kernel with a twist'
-pkgrel=11
+pkgrel=18
 arch=('x86_64' 'x86_64_v3')
 url="https://github.com/nine7nine/Linux-NSPA"
 license=('GPL2')
@@ -88,12 +88,13 @@ source=(
   "auto-cpu-optimization.sh"
   "0000-more-uarches-for-kernel-5.17+.patch"
   "0000-TIP-locking-core_6.1-oct7.patch"
-  "0000-TIP-rcu.2022.09.30-oct7.patch"
+  "0000-TIP-rcu.2022.09.30-oct7_urgent-oct20.patch"
   "0000-TIP-sched-core_6.1-mostly_oct10.patch"
   "0000-MM-nonmm-stable_oct10.patch"
   "0000-io_uring-6.1_updates.patch"
   "0001-ClearLinux-patchwork.patch"
   "0002-MM-Maple-Tree-MGlru-all_6.1.patch"
+  "0003-MM-stable-nonmm-hotfixes_oct28.patch"
   "0004-add-sysctl-to-disallow-unprivileged-CLONE_NEWUSER-by.patch"
   "0005-sched-fair-Compile-out-NUMA-code-entirely-when-NUMA-.patch"
   "0006-x86-Enable-fast-strings-on-Intel-if-BIOS-hasn-t-alre.patch"
@@ -115,15 +116,22 @@ source=(
   "0023-locking-semaphore-Use_wake_q_to_wake_up_processes_outside_lock_cs.patch"
   "0026-sbitmap-fix_lockup_while_swapping.patch"
   "0027-hid-wacom-Silence_log_spam.patch"
-  "0028-sched-fair-feec-scale_rt_capacity-improvements.patch"
+  "0028-TIP-sched-core-affinity_uclamp_etc_oct31.patch"
   "0030-platform-x86-AMD-pmf-CnQf.patch"
-  "0031-sched-core-affinity_patchwork.patch"
   "0032-Implement-AMD-Pstate-EPP-Driver.patch"
   "0033-ALSA-dmaengine-increment_buffer_pointer_atomically.patch"
   "0034-HID-multitouch-Add_memory_barriers.patch"
   "0035-Signal-break_out_of_wait_loops_on_kthread_stop.patch"
   "0037-softirq_rt_optmizations_v4.patch"
   "0038-designware-Fix_handling_of_real_but_unexpected_device_interrupts.patch"
+  "0039-tk_vm-mm_optimizations.patch"
+  "0040-sched-Fix_race_in_task_call_func.patch"
+  "0041-sched-fair-Introduce-priority-load-balance-for-CFS.patch"
+  "0042-v2_sched-sched_fork-optimizations.patch"
+  "0043-Kernel_tuning-CONFIG_NSPA.patch"
+  "0044-amdpgu_misc_fixes_oct21.patch"
+  "0045-ACPI-fixes_updates.patch"
+  "0046-v5-locking-rwsem-Enable-direct-rwsem-lock-handoff.patch"
 )
 
 export KBUILD_BUILD_HOST=archlinux
@@ -322,17 +330,17 @@ prepare() {
     fi
 
 
-#    ### Optionally load needed modules for the make localmodconfig
-#    # See https://aur.archlinux.org/packages/modprobed-db
-#    if [ -n "$_localmodcfg" ]; then
-#        if [ -e $HOME/.config/modprobed.db ]; then
-#            echo "Running Steven Rostedt's make localmodconfig now"
-#            make ${BUILD_FLAGS[*]} LSMOD=$HOME/.config/modprobed.db localmodconfig
-#        else
-#            echo "No modprobed.db data found"
-#            exit
-#        fi
-#    fi
+    ### Optionally load needed modules for the make localmodconfig
+    # See https://aur.archlinux.org/packages/modprobed-db
+    if [ -n "$_localmodcfg" ]; then
+        if [ -e $HOME/.config/modprobed.db ]; then
+            echo "Running Steven Rostedt's make localmodconfig now"
+            make ${BUILD_FLAGS[*]} LSMOD=$HOME/.config/modprobed.db localmodconfig
+        else
+            echo "No modprobed.db data found"
+            exit
+        fi
+    fi
 
     echo "Applying default config..."
     make ${BUILD_FLAGS[*]}  olddefconfig
@@ -469,17 +477,18 @@ for _p in "${pkgname[@]}"; do
 done
 
 sha256sums=('98001d91f5bb1d29ad9489c71a6a75950c2610027e9eb0c513379b8f6d44df38'
-            'cdb8494b55132eceb05953c7b59b99a43b5ffdda38ebe4255b3cc0904129713e'
+            'c304eae7fcc3f6419b568a749057167631bab67ec263f282012a085c4ac118d4'
             '9abdc6c5f40b81c044f5549e8f29d474dc51e2765ee2b5e9a5fba9e62499dd9e'
             'e1d45b5842079a5f0f53d7ea2d66ffa3f1497766f3ccffcf13ed00f1ac67f95e'
             '8d4a22387dbe7a9f339555c99bd70c55c033422026244b98cbfd93eb39fb99c2'
-            'd6df293139a7a04720b74832a726ebcf733f467b3af051570c6ba0c602d1fa8e'
-            'f8769d0090df6cf9b89dd6b7874697629fde5b8a1aac0a59f007d0cfa0f2b24c'
-            'c99b5546efd7ab8d78fa927e8c7541b1878d8b0ca76bc4c6da76239c858f0bf7'
+            'f95d91e380de25af5615ea7c4176ea0ea955458cec2c7b35dac8cff84433c3e5'
+            '1f2d5ead4a66bb615ea6f9830d15740c0f2d82b9e1df3f321b7940901657b596'
+            '92d1dcd9dab57cc8157e86ecb5e4ef62f60b6482300d6be2ff1ab486e328c97d'
             '550ee05b3b79d1481e68bb1de75abba14cadffd7e3bad848410eb5262aef0fe2'
             '9d6ac17bf79e322299471161465003da0e1168a51846da9561bef74edba0d7d3'
             '35a7cde86fb94939c0f25a62b8c47f3de0dbd3c65f876f460b263181b3e92fc0'
             'a16d854c622377ba752d5e17c1fc728a10802ac43289c17feef9bcb153385cde'
+            'f0b92151ebac232020ea048968a3d1bd2beb2b7d2a04d51b1d77ffe53dab26cc'
             'f6383abef027fd9a430fd33415355e0df492cdc3c90e9938bf2d98f4f63b32e6'
             '5c2a0c96dfa0909f1def1bf9ef0ad9b7e1b90263ca751a2cbd0956d009f0f7cb'
             'e3c106cfac323c6f677b698b080b48798ea63786a7153f81d9a21f749e73168d'
@@ -501,13 +510,20 @@ sha256sums=('98001d91f5bb1d29ad9489c71a6a75950c2610027e9eb0c513379b8f6d44df38'
             '5595da97f297de0dc832d1f12254cb5d05c555ef6e2a113e38821dea8b37acca'
             '153935699c4f15434c06582a64054660f55eaee9d5c70b277442b5156ccdfb15'
             '59b410a6cbe6a33c91f54139e4a710fbd2dc29e771d60d49b7ec715d3d7e12fe'
-            'ee5649eb39573a396376fb2b2caffbf49fd230666189a005ce17228532399658'
+            '6fa1259ab23acb564c03bb62c85e93785e441259f7bd718003eb25babeee4676'
             'ea7d35280b3a02acbc79a92fa5ddce678d5fdfaecb65ee35ef13a076a0a8eb55'
-            'fb31aa7f60f970d5161cdd06386a96c9fda0504bde27fd5b61fa66c74e84fbb5'
             'c0db4d0fdec2f74b05bfd59a4517c0738ab15afc3dd4c66eaa8e6999c284dddf'
             '86030c72531b045bc9fc27329334f7c6a506fb789d0b81e08ff192b43491ae9b'
             'ccc57033c40817060be1399e4be9e1db585c695967a74c0f3b94bc342c242bea'
             'a32576a1c21e3cc1a892e36ea221677d5da318c141693127ab00bb863378638b'
             '2b392ce19b2e924d4e8b2603179eb859595e7710b7c594bba22f6e9099fc329d'
-            'd965b53e37b982cf9681ea2251f2be2e3f64a55bfea094a9ace55c88da4f0d49')
+            'd965b53e37b982cf9681ea2251f2be2e3f64a55bfea094a9ace55c88da4f0d49'
+            '65f27712e555a70ec358bbb75db50ef922ab6000b62c752f6388e5d5963ae370'
+            '6dfe8e2900e7528f3d546231b09dd40813202056b293183fd62da0d2c2b44d41'
+            '5bd4a1e9c0a7f86531b98f0d9252e89da6cb375f0fde2ece9cf5fb82568c3a03'
+            '6763b3ce2e74b474445f455fd45cf82554e61d53a56ec50a73592710031b9383'
+            'c97dbb598c77553f6312bd3572cc055e44f271ca399173732ead77b88e484c90'
+            '7deab169ff35045afdbe13ff225e6f4dfebbfa1c84d97da6697c7931ecc17ed8'
+            '7042db914dc7287782ff5d04b8e62da0e9200dc4b4d370d623a1ababb54535d2'
+            'a3aa689da7950661fbbe5fb796807a676072bae60a21d1eaf9d5401558ecaef5')
 
