--- a/linux-nspa/PKGBUILD
+++ b/linux-nspa/PKGBUILD
@@ -75,7 +75,7 @@ _stable=${_major}.${_minor}
 _srcname=linux-rt-devel-6.0-rt11
 arch=(x86_64 x86_64_v3)
 pkgdesc='Linux-NSPA: PREEMPT_RT_FULL kernel with a twist'
-pkgrel=20
+pkgrel=21
 arch=('x86_64' 'x86_64_v3')
 url="https://github.com/nine7nine/Linux-NSPA"
 license=('GPL2')
@@ -132,6 +132,7 @@ source=(
   "0045-ACPI-fixes_updates.patch"
   "0046-v5-locking-rwsem-Enable-direct-rwsem-lock-handoff.patch"
   "0047-upstream_fixes_stable.patch"
+  "0048-mm-hotfixes-stable-2022-11-11.patch"
 )
 
 export KBUILD_BUILD_HOST=archlinux
@@ -525,5 +526,6 @@ sha256sums=('98001d91f5bb1d29ad9489c71a6a75950c2610027e9eb0c513379b8f6d44df38'
             '9a3268c064470b0e2665d296027a2e7d9a8e5bab437a1eee4be8ad67a2f42046'
             '7042db914dc7287782ff5d04b8e62da0e9200dc4b4d370d623a1ababb54535d2'
             'a3aa689da7950661fbbe5fb796807a676072bae60a21d1eaf9d5401558ecaef5'
-            '72fd812fd814d19eae3148615af3ad457397d12d6bfd9357f5688e9d8a734cad')
+            '72fd812fd814d19eae3148615af3ad457397d12d6bfd9357f5688e9d8a734cad'
+            '85e141479d6787ef2098098c746d6140690b6a23403564458cd7e00a86a9f902')
 
