--- a/linux-nspa/PKGBUILD
+++ b/linux-nspa/PKGBUILD
@@ -75,7 +75,7 @@ _stable=${_major}.${_minor}
 _srcname=linux-rt-devel-6.0-rt11
 arch=(x86_64 x86_64_v3)
 pkgdesc='Linux-NSPA: PREEMPT_RT_FULL kernel with a twist'
-pkgrel=35
+pkgrel=36
 arch=('x86_64' 'x86_64_v3')
 url="https://github.com/nine7nine/Linux-NSPA"
 license=('GPL2')
@@ -142,6 +142,8 @@ source=(
   "0054-sched-core-Fix_arch_scale_freq_tick_on_tickless_systems.patch"
   "0055-Add_support_for_epoll_min_wait.patch"
   "0056-mm-multi-gen-LRU-memcg-LRU.patch"
+  "0057-sched-core_ttwu_optimize_and_organize.patch"
+  "0058-cgroup-cpuset-Task_migration_optimization.patch"
 )
 
 export KBUILD_BUILD_HOST=archlinux
@@ -545,5 +547,7 @@ sha256sums=('98001d91f5bb1d29ad9489c71a6a75950c2610027e9eb0c513379b8f6d44df38'
             '870bd03dada88a2d2bca40600f8b36bf3a8a0aacce8d96f72a682a572a309de1'
             '86b19ca560760855d9d9c69266c3c93bc9f35cacabe57d8bb88284d846687edb'
             '9fca36d6492c6ab4244f197f3cf5771d50b8bdad6061987a36bdc9a91cec0aa8'
-            '1fbba2faa29189509376e2892f0cc25cd7760f46029e8c4633af6ae537e4202b')
+            '1fbba2faa29189509376e2892f0cc25cd7760f46029e8c4633af6ae537e4202b'
+            '12d28c8c8683c8b5aa3d100ab0ce9f563a274e4c35b37f552f65ec6e587a67e1'
+            'd39a84348d7ecdef83262f708c5ef3676f0f6d5bfafc9d6e9ae01026cebddf13')
 
