Linux-NSPA-S7: updates, tweaks & spinlocks fix
 - Add MM fixes ( 0059-mm-hotfixes-stable-2022-12-10.patch )
 - Tweak IPTS driver interval + fix building in-tree
 - SSAM: convert controller spinlock to raw_spinlock (PREEMPT_RT)
 - reorder patchwork

 note: it appears that the SSAM code makes bad assumptions about
 spinlocks, or rather it doesn't consider PREEMPT_RT kernels, which
 it should - given that PREEMPT_RT will be mainline shortly.

 * This seems to be enough to avoid hangs on shutdown *

 However, I'm not sure if this fixes all spinlock issues. eg: SSAM
 related code / clients use scru && pm notifiers; which in some cases
 may use raw_spinlocks. ~ that could be a problem if said code uses
 regular spinlocks, before call raw spinlocks... That works on
 mainline, but isn't allowed on -RT. (although, one would think
 lockdep would catch this on mainline too...?)

Signed-off-by: jordan Johnston <johnstonljordan@gmail.com>

--- a/linux-nspa-S7/config
+++ b/linux-nspa-S7/config
@@ -468,7 +468,7 @@ CONFIG_X86_MCE=y
 CONFIG_X86_MCE_INTEL=y
 CONFIG_X86_MCE_AMD=y
 CONFIG_X86_MCE_THRESHOLD=y
-# CONFIG_X86_MCE_INJECT is not set
+CONFIG_X86_MCE_INJECT=m
 
 #
 # Performance monitoring
@@ -2255,6 +2255,7 @@ CONFIG_EFI_VARS_PSTORE=y
 CONFIG_EFI_VARS_PSTORE_DEFAULT_DISABLE=y
 CONFIG_EFI_RUNTIME_MAP=y
 # CONFIG_EFI_FAKE_MEMMAP is not set
+CONFIG_EFI_SOFT_RESERVE=y
 CONFIG_EFI_DXE_MEM_ATTRIBUTES=y
 CONFIG_EFI_RUNTIME_WRAPPERS=y
 CONFIG_EFI_GENERIC_STUB_INITRD_CMDLINE_LOADER=y
@@ -2270,6 +2271,7 @@ CONFIG_EFI_EARLYCON=y
 CONFIG_EFI_CUSTOM_SSDT_OVERLAYS=y
 # CONFIG_EFI_DISABLE_RUNTIME is not set
 CONFIG_EFI_COCO_SECRET=y
+CONFIG_EFI_EMBEDDED_FIRMWARE=y
 # end of EFI (Extensible Firmware Interface) Support
 
 CONFIG_UEFI_CPER=y
@@ -2546,7 +2548,7 @@ CONFIG_VMWARE_VMCI=m
 CONFIG_PVPANIC=y
 # CONFIG_PVPANIC_MMIO is not set
 # CONFIG_PVPANIC_PCI is not set
-CONFIG_HID_IPTS=y
+CONFIG_MISC_IPTS=y
 # end of Misc devices
 
 #
