Linux-NSPA-S7: rework IPTS patches
 - Remove/Replace old IPTS driver with Latest code ( MISC => HID )
 - Remove/Move IPTS patches from Microsoft Surface patchwork
 - Flip/Reorder patches to apply cleanly.

 note: IPTS driver bulds properly without conflicting with DKMS
 ipts driver. (tested, although now I can remove DKMS ipts module).

Signed-off-by: jordan Johnston <johnstonljordan@gmail.com>

--- a/linux-nspa-S7/config
+++ b/linux-nspa-S7/config
@@ -2548,7 +2548,7 @@ CONFIG_VMWARE_VMCI=m
 CONFIG_PVPANIC=y
 # CONFIG_PVPANIC_MMIO is not set
 # CONFIG_PVPANIC_PCI is not set
-CONFIG_MISC_IPTS=y
+CONFIG_HID_IPTS=y
 # end of Misc devices
 
 #
