Linux-NSPA-S7: misc, config cleanup
 - IPTS: increase msleep for sensor on reset
 - Surface-Aggregator: enable more built-in modules
 - Kconfig: cleanup kernel config

Signed-off-by: jordan Johnston <johnstonljordan@gmail.com>

--- a/linux-nspa-S7/config
+++ b/linux-nspa-S7/config
@@ -603,7 +603,6 @@ CONFIG_ACPI=y
 CONFIG_ACPI_LEGACY_TABLES_LOOKUP=y
 CONFIG_ARCH_MIGHT_HAVE_ACPI_PDC=y
 CONFIG_ACPI_SYSTEM_POWER_STATES_SUPPORT=y
-CONFIG_ACPI_TABLE_LIB=y
 # CONFIG_ACPI_DEBUGGER is not set
 CONFIG_ACPI_SPCR_TABLE=y
 CONFIG_ACPI_FPDT=y
@@ -623,7 +622,6 @@ CONFIG_ACPI_PROCESSOR_CSTATE=y
 CONFIG_ACPI_PROCESSOR_IDLE=y
 CONFIG_ACPI_CPPC_LIB=y
 CONFIG_ACPI_PROCESSOR=y
-CONFIG_ACPI_IPMI=m
 CONFIG_ACPI_HOTPLUG_CPU=y
 CONFIG_ACPI_PROCESSOR_AGGREGATOR=m
 CONFIG_ACPI_THERMAL=y
@@ -652,7 +650,6 @@ CONFIG_ACPI_APEI_MEMORY_FAILURE=y
 CONFIG_ACPI_DPTF=y
 CONFIG_DPTF_POWER=m
 CONFIG_DPTF_PCH_FIVR=m
-CONFIG_ACPI_WATCHDOG=y
 CONFIG_ACPI_EXTLOG=m
 CONFIG_ACPI_CONFIGFS=m
 CONFIG_ACPI_PFRUT=m
@@ -872,7 +869,6 @@ CONFIG_HAVE_NOINSTR_VALIDATION=y
 CONFIG_HAVE_UACCESS_VALIDATION=y
 CONFIG_HAVE_STACK_VALIDATION=y
 CONFIG_HAVE_RELIABLE_STACKTRACE=y
-CONFIG_ISA_BUS_API=y
 CONFIG_OLD_SIGSUSPEND3=y
 CONFIG_COMPAT_OLD_SIGACTION=y
 CONFIG_COMPAT_32BIT_TIME=y
@@ -1013,7 +1009,6 @@ CONFIG_BFQ_GROUP_IOSCHED=y
 CONFIG_PREEMPT_NOTIFIERS=y
 CONFIG_PADATA=y
 CONFIG_ASN1=y
-CONFIG_UNINLINE_SPIN_UNLOCK=y
 CONFIG_ARCH_SUPPORTS_ATOMIC_RMW=y
 CONFIG_MUTEX_SPIN_ON_OWNER=y
 CONFIG_RWSEM_SPIN_ON_OWNER=y
@@ -1021,7 +1016,6 @@ CONFIG_LOCK_SPIN_ON_OWNER=y
 CONFIG_ARCH_USE_QUEUED_SPINLOCKS=y
 CONFIG_QUEUED_SPINLOCKS=y
 CONFIG_ARCH_USE_QUEUED_RWLOCKS=y
-CONFIG_QUEUED_RWLOCKS=y
 CONFIG_ARCH_HAS_NON_OVERLAPPING_ADDRESS_SPACE=y
 CONFIG_ARCH_HAS_SYNC_CORE_BEFORE_USERMODE=y
 CONFIG_ARCH_HAS_SYSCALL_WRAPPER=y
@@ -2548,7 +2542,6 @@ CONFIG_VMWARE_VMCI=m
 CONFIG_PVPANIC=y
 # CONFIG_PVPANIC_MMIO is not set
 # CONFIG_PVPANIC_PCI is not set
-CONFIG_HID_IPTS=y
 # end of Misc devices
 
 #
@@ -6143,6 +6136,7 @@ CONFIG_SURFACE_KBD=m
 # end of Surface System Aggregator Module HID support
 
 CONFIG_SURFACE_HID_CORE=m
+CONFIG_HID_IPTS=y
 # end of HID support
 
 CONFIG_USB_OHCI_LITTLE_ENDIAN=y
@@ -6812,12 +6806,12 @@ CONFIG_SURFACE_PLATFORMS=y
 # CONFIG_SURFACE3_WMI is not set
 # CONFIG_SURFACE_3_POWER_OPREGION is not set
 # CONFIG_SURFACE_ACPI_NOTIFY is not set
-# CONFIG_SURFACE_AGGREGATOR_CDEV is not set
+CONFIG_SURFACE_AGGREGATOR_CDEV=y
 CONFIG_SURFACE_AGGREGATOR_HUB=y
 CONFIG_SURFACE_AGGREGATOR_REGISTRY=y
 # CONFIG_SURFACE_AGGREGATOR_TABLET_SWITCH is not set
 # CONFIG_SURFACE_BOOK1_DGPU_SWITCH is not set
-# CONFIG_SURFACE_DTX is not set
+CONFIG_SURFACE_DTX=y
 CONFIG_SURFACE_GPE=y
 # CONFIG_SURFACE_HOTPLUG is not set
 CONFIG_SURFACE_PLATFORM_PROFILE=y
