--- a/linux-nspa-S7/PKGBUILD
+++ b/linux-nspa-S7/PKGBUILD
@@ -75,7 +75,7 @@ _stable=${_major}.${_minor}
 _srcname=linux-rt-devel-6.0-rt11
 arch=(x86_64 x86_64_v3)
 pkgdesc='Linux-NSPA: PREEMPT_RT_FULL kernel with a twist'
-pkgrel=51
+pkgrel=54
 arch=('x86_64' 'x86_64_v3')
 url="https://github.com/nine7nine/Linux-NSPA"
 license=('GPL2')
@@ -150,6 +150,10 @@ source=(
   "0062-pm_vs_preempt_rt.patch"
   "0063-SSAM-convert_ssam_controller_lock_to_raw_spinlock.patch"
   "0064-SSAM-convert_rwsems_to_mutexes.patch"
+  "0065-i2c-designware-Fix_unbalanced_suspended_flag.patch"
+  "0066-qspinlock-Optimize_pending_state_waiting_for_unlock.patch"
+  "0067-softirq-wake_up_ktimer_thread_in_softirq_context.patch"
+  "0068-locking-rwbase-Prevent_indefinite_writer_starvation.patch"
 )
 
 export KBUILD_BUILD_HOST=archlinux
@@ -560,5 +564,9 @@ sha256sums=('98001d91f5bb1d29ad9489c71a6a75950c2610027e9eb0c513379b8f6d44df38'
             '119a14ebc1c486e5b688b42897e0d9bc2378f72d15ca582205b1c72b2082149c'
             '01cc1c601a2da6899b0ce85cbb26a48550ad8fbbfef3acea33ff150d5a48e7fd'
             '6c173f1ed247204522656076f15b771c1e18b6cafb4666de313e265ee1a91f50'
-            '42d5cc0484e5ba884062d12c938d0edf3f13cca84038410ac86be569e46e4f79')
+            '42d5cc0484e5ba884062d12c938d0edf3f13cca84038410ac86be569e46e4f79'
+            '20957e713d21d8e23614510f9299cff0dc4cfbf85ee4b826b7efcfc80b460f5a'
+            'b516980c9d6c26c4bc214a9543f8727a601305fb67adc715c937f33b12c8defb'
+            '9d1833e412ca375420a2d7dc0ab343e86210df8d1e49b751c3b0ddf32b948837'
+            'ca873d12780be5e08853319b242deda3baacf069722f1bd764f7a6b1dab76f57')
 
